# lightweight_mmm

./: .gitignore  README.md  lightweight_mmm.py  lightweight_mmm_test.py  media_transforms.py  media_transforms_test.py  models.py  models_test.py  optimize_media.py  optimize_media_test.py  plot.py  plot_test.py  preprocessing.py  preprocessing_test.py  pyproject.toml  readthedocs.yaml  setup.py  test.sh  utils.py  utils_test.py
.github/workflows/: ci.yaml  manual-python-publish.yaml  python_publish.yaml
docs/: .gitignore  Makefile  api.rst  conf.py  custom_priors.ipynb  faq.md  index.rst  models.ipynb  models.md  requirements.txt
examples/: end_to_end_demo_with_multiple_geos.ipynb  simple_end_to_end_demo.ipynb
lightweight_mmm/: __init__.py  conftest.py  lightweight_mmm.py  lightweight_mmm_test.py  media_transforms.py  media_transforms_test.py  models.py  models_test.py  optimize_media.py  optimize_media_test.py  plot.py  plot_test.py  preprocessing.py  preprocessing_test.py  utils.py  utils_test.py
lightweight_mmm/core/: __init__.py  core_utils.py  core_utils_test.py  priors.py
lightweight_mmm/core/baseline/: intercept.py  intercept_test.py
lightweight_mmm/core/time/: __init__.py  seasonality.py  seasonality_test.py  trend.py  trend_test.py
lightweight_mmm/core/transformations/: __init__.py  identity.py  lagging.py  lagging_test.py  saturation.py  saturation_test.py
requirements/: requirements-docs.txt  requirements.txt  requirements_docs.txt  requirements_tests.txt
tests/: conftest.py  test_setup_validation.py
